--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "/assets/images/logo.png",
+      "src": "/assets/images/pwalogo.png",
       "sizes": "192x192",
       "type": "image/png"
     }
