--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-config-next": "15.3.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "supabase": "^2.23.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.8",
     "typescript": "^5.8.3"
